# archon-controller

./: Cargo.toml  Embed.toml  README.md  transmitter_test.py
.cargo/: config.toml
.cargo/runners/: flash-and-probe.toml  flash.toml  uf2.toml
archon-core/: Cargo.toml  README.md
archon-core/src/: consts.rs  discovery.rs  endpoint.rs  input.rs  lib.rs  ring.rs  rwlock.rs  socket.rs  status.rs  tasks.rs  utils.rs
archon-core/src/devices/: button.rs  dpad.rs  joystick.rs  layout.rs  mod.rs  polling.rs  rotary.rs
archon-core/src/diagnostics/: frametime.rs  mod.rs
archon-core/src/discovery/: discovery.rs  internal.rs  mod.rs  structures.rs
archon-macros/: Cargo.toml
archon-macros/src/: lib.rs
archon-receiver/: Cargo.toml  README.md
archon-receiver/src/: consts.rs  entry.rs  main.rs  receiver.rs  statics.rs  tasks.rs
archon-transmitter/: Cargo.toml  README.md
archon-transmitter/src/: button_test.rs  consts.rs  devices.rs  entry.rs  main.rs  tasks.rs  tests.rs  transmitter.rs
archon-transmitter/src/device/: buffered.rs  builder.rs  mod.rs
archon-transmitter/src/display/: display.rs  mod.rs  theme.rs
archon-transmitter/src/interface/: enums.rs  indicator.rs  mod.rs  select.rs  structures.rs  style.rs  traits.rs  utils.rs
archon-transmitter/src/interface/menus/: about.rs  diagnostics.rs  discovery.rs  main.rs  mod.rs  settings.rs
archon-transmitter/src/menu/: enums.rs  indicator.rs  interface.rs  menus.rs  mod.rs  structures.rs  theme.rs  utils.rs
src/: controller.rs  entry.rs  main.rs
src/configuration/: common.rs  mod.rs  statics.rs
src/controller/: input.rs  mod.rs  receiver.rs
src/diagnostics/: frametime.rs  mod.rs
src/tasks/: mod.rs
