[workspace]
resolver = "2"
members = ["archon-core", "archon-receiver", "archon-transmitter"]


[profile.dev]
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
lto = "thin"


[profile.dev-optimized]
inherits = "dev"
debug = 2
debug-assertions = false


[profile.release]
opt-level = 3
lto = "thin"


[profile.release-optimized]
inherits = "release"
opt-level = "s"
debug = false
strip = true
