[workspace]
resolver = "2"
members = ["archon-core", "archon-receiver", "archon-transmitter"]


# Dependencies
[workspace.dependencies.archon_core]
path = "./archon-core"


[workspace.dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "79cdafa1bbb5f658e03cd8e8248ef107ce06aac3"
package = "embsys"
features = ["rp2040-probe"]


[workspace.dependencies.embedded-menu]
git = "https://github.com/bugadani/embedded-menu"
rev = "7978c8fdbac1d130c14d0be1730200f0e684bd22"


[workspace.dependencies.ssd1351]
version = "0.5"
features = ["graphics", "buffered"]


[workspace.dependencies.embedded-layout]
version = "0.4"


[workspace.dependencies.strum]
version = "0.26"
default-features = false


[workspace.dependencies.strum_macros]
version = "0.26"
default-features = false


[workspace.dependencies.num]
version = "0.4"
default-features = false


# Profiles
[profile.dev]
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
lto = "thin"


[profile.dev-optimized]
inherits = "dev"
debug = 2
debug-assertions = false


[profile.release]
opt-level = 3
lto = "thin"


[profile.release-optimized]
inherits = "release"
opt-level = "s"
debug = false
strip = true
