[package]
name = "archon_core"
version = "0.1.0"
edition = "2021"


[lib]
name = "archon_core"
path = "src/lib.rs"
test = false
bench = false


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "55a92f18a71346fe8eb9698571d525c736ab6299"
package = "embsys"
features = ["rp2040-probe"]


[dependencies.num]
version = "0.4"
default-features = false
