[package]
name = "archon_core"
version = "0.1.0"
edition = "2021"


[lib]
name = "archon_core"
path = "src/lib.rs"
test = false
bench = false


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "27e7bc3a5d9a7ab83c3ea42e670d90af0b0d36c3"
package = "embsys"
features = ["rp2040-probe"]


[dependencies.num]
version = "0.4"
default-features = false
