[package]
name = "archon_core"
version = "0.1.0"
edition = "2021"


[lib]
name = "archon_core"
path = "src/lib.rs"
test = false
bench = false


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "3770e50320999c5f59df660e810137bc216c087f"
package = "embsys"
features = ["rp2040-probe"]


[dependencies.num]
version = "0.4"
default-features = false
