[package]
name = "archon-receiver"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-receiver"
test = false
bench = false


[dependencies.archon_core]
path = "../archon-core"


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "55a92f18a71346fe8eb9698571d525c736ab6299"
package = "embsys"
features = ["rp2040-probe"]
