[package]
name = "archon-receiver"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-receiver"
test = false
bench = false


[dependencies.archon_core]
path = "../archon-core"


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "27e7bc3a5d9a7ab83c3ea42e670d90af0b0d36c3"
package = "embsys"
features = ["rp2040-probe"]
