[package]
name = "archon-receiver"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-receiver"
test = false
bench = false


[dependencies.archon_core]
path = "../archon-core"


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "3770e50320999c5f59df660e810137bc216c087f"
package = "embsys"
features = ["rp2040-probe"]
