[package]
name = "archon-transmitter"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-transmitter"
test = false
bench = false


[dependencies.archon_core]
path = "../archon-core"


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "3770e50320999c5f59df660e810137bc216c087f"
package = "embsys"
features = ["rp2040-probe"]


[dependencies.ssd1351]
version = "0.5"
features = ["graphics", "buffered"]


[dependencies.embedded-menu]
version = "0.6"
