[package]
name = "archon-transmitter"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-transmitter"
test = false
bench = false


[dependencies.archon_core]
path = "../archon-core"


[dependencies.embsys]
git = "https://github.com/syn-chromatic/embsys-rs.git"
rev = "3770e50320999c5f59df660e810137bc216c087f"
package = "embsys"
features = ["rp2040-probe"]


[dependencies.ssd1351]
version = "0.5"
features = ["graphics", "buffered"]


[dependencies.embedded-menu]
# version = "0.6"
git = "https://github.com/syn-chromatic/embedded-menu.git"
rev = "993e18e3579099af7d196f0854be43ee026e063b"


[dependencies.embedded-layout]
version = "0.4"


[dependencies.strum]
version = "0.26"
default-features = false


[dependencies.strum_macros]
version = "0.26"
default-features = false
