[package]
name = "archon-transmitter"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "archon-transmitter"
test = false
bench = false


[dependencies.archon_core]
workspace = true


[dependencies.embsys]
workspace = true


[dependencies.ssd1351]
workspace = true


[dependencies.embedded-menu]
workspace = true


[dependencies.embedded-layout]
workspace = true


[dependencies.strum]
workspace = true


[dependencies.strum_macros]
workspace = true
